--- a/apps/subgraph/subgraph.yaml.mustache
+++ b/apps/subgraph/subgraph.yaml.mustache
@@ -183,6 +183,29 @@ templates:
         - event: DelegateChanged(indexed address,indexed address,indexed address)
           handler: handleDelegateChanged
       file: ./src/token.ts
+{{#zoraNFTCreator}}
+  - kind: ethereum
+    name: ZoraDrop
+    network: {{network}}
+    source:
+      abi: ERC721Drop
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - ZoraDrop
+        - ZoraDropOwner
+      abis:
+        - name: ERC721Drop
+          file: ./abis/ERC721Drop.json
+      eventHandlers:
+        - event: Sale(indexed address,indexed uint256,indexed uint256,uint256)
+          handler: handleSale
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
+      file: ./src/zoraDropTemplate.ts
+{{/zoraNFTCreator}}
   - kind: ethereum
     name: Governor
     network: {{network}}
