fix: use zoraDropHolders + centralize address_zero constant

--- a/apps/subgraph/subgraph.yaml.mustache
+++ b/apps/subgraph/subgraph.yaml.mustache
@@ -195,7 +195,7 @@ templates:
       language: wasm/assemblyscript
       entities:
         - ZoraDrop
-        - ZoraDropOwner
+        - ZoraDropHolder
       abis:
         - name: ERC721Drop
           file: ./abis/ERC721Drop.json
